@@ -23,6 +23,10 @@ panel.Stratiplot(x, y,
                  lty.smooth = plot.line$lty,
                  lwd.smooth = 2,
                  fill = plot.symbol$fill,
+                 zones = NULL,
+                 col.zones = plot.line$col,
+                 lty.zones = plot.line$lty,
+                 lwd.zones = plot.line$lwd,
                  \dots)
 }
 %- maybe also 'usage' for other objects documented here.
@@ -53,7 +57,7 @@ panel.Stratiplot(x, y,
     For \code{"poly"}, a shaded polygon, or silhouette, is drawn for each
     panel.}
   \item{col, col.line, col.symbol, col.poly, col.refline,
-    col.smooth}{colour parameters. For all but \code{col.smooth},
+    col.smooth, col.zones}{colour parameters. For all but \code{col.smooth},
     default colours are obtained from \code{plot.symbol} and
     \code{plot.line} using
     \code{\link[lattice]{trellis.par.get}}. \code{col.refline} controls the
@@ -65,6 +69,10 @@ panel.Stratiplot(x, y,
     obtained from \code{plot.line} using
     \code{\link[lattice]{trellis.par.get}}.}
   \item{lwd.smooth}{The line width for the loess smoother.}
+  \item{zones}{numeric; vector of zone boundary positions on scale of
+    the depth/time (y-)axis.}
+  \item{lty.zones, lwd.zones}{line type and width for the zone
+    markers. The defaults are obtained from \code{plot.line}.}
   \item{\dots}{extra arguments passed on to the underlying panel
     functions; \code{\link[lattice]{panel.points}},
     \code{\link[lattice]{panel.lines}},
